--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-pytest>=7.0.0
-pytest-playwright>=0.4.0
-allure-pytest>=2.13.0
+pytest==9.0.1
+pytest-playwright==0.7.2
+allure-pytest==2.15.2
+playwright==1.56.0
