update pre-commit config

--- a/mypy.ini
+++ b/mypy.ini
@@ -16,3 +16,6 @@ ignore_missing_imports = True
 [mypy-tests.*]
 disallow_untyped_calls = False
 disallow_untyped_decorators = False
+
+[mypy-pages.*]
+disallow_untyped_decorators = False
